--- a/.github/actions/array-test/action.yml
+++ b/.github/actions/array-test/action.yml
@@ -24,6 +24,7 @@ runs:
         do
             echo "==============="
             path="${dir}/${arr}"
+            echo "${path}"
             if [ ! -d "${path}" ]; then
                 continue
             fi
