--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,3 +68,7 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Test step
+        run: |
+          echo "testtest"
