--- a/.github/workflows/content-update-pr.yml
+++ b/.github/workflows/content-update-pr.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/cache@67b839edb68371cc5014f6cea11c9aa77238de78
       with:
         path: ${{ env.CHECK_STORE_FILE }}
-        key: ${{ runner.os }}-precommit-checks-${{ hashFiles(env.CHECK_STORE_FILE) }}
+        key: ${{ runner.os }}-precommit-checks-${{ github.sha }}
 
     - name: Check Sha
       id: store
