--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -1,9 +1,9 @@
 name: Create and publish a Docker image
 
-on:
+on: 
   push:
     branches:
-      - example
+      __noop
     # tags:
     #   - "*"
 
