--- a/.release-it.json
+++ b/.release-it.json
@@ -2,7 +2,7 @@
     "git": {
         "commitMessage": "chore: release candidate v${version}",
         "tagName": "v${version}",
-        "tagAnnotation": "asdfasdf\n${changelog}"
+        "tagAnnotation": "${releaseId}\n${changelog}"
     },
     "npm": {
         "publish": false
