--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "github-script.js",
   "scripts": {
     "release": "release-it",
+    "changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -n .conventional-changelog.mjs -s -r 0 --skip-unstable",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/junminahn/testteste#readme",
   "dependencies": {
+    "conventional-changelog-cli": "^4.1.0",
     "exec-sh": "^0.4.0",
     "execa": "^5.1.1",
     "js-yaml": "^4.1.0",
