--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testteste",
-  "version": "100.1.0",
+  "version": "100.1.1-0",
   "description": "",
   "main": "github-script.js",
   "scripts": {
