--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -11,5 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Test
+        run: cat Release.txt
       - name: Release
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: Release.txt
