--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,11 +12,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build
-        run: echo ${{ github.sha }} > Release.txt
+        run: |
+            mkdir -p fold
+            echo ${{ github.sha }} > myfolder/Release.txt
+            echo "release" > myfolder/Release2.txt
+            tar -czvf myfolder.tar.gz myfolder
+
       - name: Test
         run: cat Release.txt
       - name: Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@69320dbe05506a9a39fc8ae11030b214ec2d1f87
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Release.txt
+          files: myfolder.tar.gz
