--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build
         run: |
-            mkdir -p fold
+            mkdir -p myfolder
             echo ${{ github.sha }} > myfolder/Release.txt
             echo "release" > myfolder/Release2.txt
             tar -czvf myfolder.tar.gz myfolder
