--- a/.github/workflows/tag-environment.yml
+++ b/.github/workflows/tag-environment.yml
@@ -5,12 +5,12 @@ on:
     tags:
       - 'v*.*.*'
 
-env:
-  IMAGE_TAG: "${{ github.ref_name#v }}"
-  
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-            echo ${{ env.IMAGE_TAG }}
+      - name: Set IMAGE_TAG
+        run: echo "IMAGE_TAG=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+
+      - name: Display IMAGE_TAG
+        run: echo $IMAGE_TAG
