--- a/.github/workflows/tag-environment.yml
+++ b/.github/workflows/tag-environment.yml
@@ -6,11 +6,18 @@ on:
       - 'v*.*.*'
 
 jobs:
-  build:
+  set-tag:
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.set-image-tag.outputs.image_tag }}
     steps:
       - name: Set IMAGE_TAG
-        run: echo "IMAGE_TAG=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+        id: set-image-tag
+        run: echo "::set-output name=image_tag::${GITHUB_REF_NAME#v}"
 
+  build:
+    needs: set-tag
+    runs-on: ubuntu-latest
+    steps:
       - name: Display IMAGE_TAG
-        run: echo $IMAGE_TAG
+        run: echo "IMAGE_TAG is ${{ needs.set-tag.outputs.image_tag }}"
